--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
 
 <div class="container">
   <h1>Aloha, <small>halcyon day to you.</small></h1>
+  <div class="greeting-texts">
+    People do not grow easily. Various opportunities are needed to grow up. I was making lots of efforts to get various opportunities. The growth does not always lead to happiness, but leads to self-trust. I look forward to becoming a more positive by self-trust.
+  </div>
 </div>
-
-<!-- jQuery (부트스트랩의 자바스크립트 플러그인을 위해 필요합니다) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<!-- 모든 컴파일된 플러그인을 포함합니다 (아래), 원하지 않는다면 필요한 각각의 파일을 포함하세요 -->
-<script src="bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
   
 </body>
   
