--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="container">
   <h1>Aloha, <small>halcyon day to you.</small></h1>
   <div class="greeting-texts">
-    People do not grow easily. Various opportunities are needed to grow up. I was making lots of efforts to get various opportunities. The growth does not always lead to happiness, but leads to self-trust. I look forward to becoming a more positive by self-trust.
+    People do not grow easily. Various opportunities are needed to grow up. I am making lots of efforts to get various opportunities. The growth does not always lead to happiness, but leads to self-trust. I look forward to becoming a more positive by self-trust.
   </div>
 </div>
   
