--- a/index.html
+++ b/index.html
@@ -50,10 +50,32 @@
 </nav>
 
 <div class="container">
-  <h1>Aloha, <small>halcyon day to you.</small></h1>
+  <h1>
+    Aloha, <small>halcyon day to you.</small></h1>
+
   <div class="greeting-texts">
-    People do not grow easily. Various opportunities are needed to grow up. I am making lots of efforts to get various opportunities. The growth does not always lead to happiness, but leads to self-trust. I look forward to becoming a more positive by self-trust.
-  </div>
+    People do not grow easily. Various opportunities are needed to grow up. I am making lots of efforts to get various opportunities. The growth does not always lead to happiness but leads to self-trust. I look forward to becoming positive by self-trust.</div>
+  
+  <p>
+    &nbsp;<br /></p>
+
+  <h3>
+    Who <small></small></h3>
+
+  <div class="who-texts">
+    <li>Love to read many kinds of books especially novel</li>
+    <li>Love to learn various IT technology ( biased/unbalanced )</li>
+    <li>Love to talk about all kinds of books even if I do not know anything about the contents</li></div>
+
+  <p>
+    &nbsp;<br /></p>
+
+  <h3>
+    How to contact <small></small></h3>
+
+  <div class="contact-texts">
+    <li>twitter: <a href="https://twitter.com/yukinpl">https://twitter.com/yukinpl</a></li>
+    </div>
 </div>
   
 </body>
