--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     Who <small></small></h3>
 
   <div class="who-texts">
-    <li>Love to read many kinds of books especially novel</li>
-    <li>Love to learn various IT technology ( biased/unbalanced )</li>
+    <li>Love to read many kinds of books<!-- especially novel--></li>
+    <li>Love to learn various IT technology<!-- ( biased/unbalanced )--></li>
     <li>Love to talk about all kinds of books even if I do not know anything about the contents</li></div>
 
   <p>
