--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-	<!--
+  <!--
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
@@ -44,7 +44,7 @@
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
-	-->
+  -->
     </ul>
   </div>
 </nav>
@@ -63,6 +63,8 @@
     Who <small></small></h3>
 
   <div class="who-texts">
+    You can call me 'e.riny' ( pronunciation is not important )<br />
+    &nbsp;<br />
     <li>Love to read many kinds of books<!-- especially novel--></li>
     <li>Love to learn various IT technology<!-- ( biased/unbalanced )--></li>
     <li>Love to talk about all kinds of books even if I do not know anything about the contents</li></div>
