--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     Who <small></small></h3>
 
   <div class="who-texts">
-    You can call me 'e.riny' ( pronunciation is not important )<br />
+    You can call me 'e.riny'<br />
+    - pronunciation is not important<br />
     &nbsp;<br />
     <li>Love to read many kinds of books<!-- especially novel--></li>
     <li>Love to learn various IT technology<!-- ( biased/unbalanced )--></li>
