--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
   <div class="contact-texts">
     <li>twitter: <a href="https://twitter.com/yukinpl">https://twitter.com/yukinpl</a></li>
     </div>
+  
+  <p>
+    &nbsp;<br /></p>
+  
 </div>
   
 </body>
