--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     Aloha, <small>halcyon day to you.</small></h1>
 
   <div class="greeting-texts">
-    People do not grow easily. Various opportunities are needed to grow up. I am making lots of efforts to get various opportunities. The growth does not always lead to happiness but leads to self-trust. I am looking forward to becoming positive by self-trust.<br />
+    People do not grow easily. Various opportunities are needed to grow up. People is making lots of efforts to get various opportunities. The growth does not always lead to happiness but leads to self-trust. I am looking forward to becoming positive by self-trust.<br />
     &nbsp;<br />
     But, be natural. It is important.</div>
   
