--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     You can call me 'e.riny'<br />
     - pronunciation is not important<br />
     &nbsp;<br />
-    <li>Love to read many kinds of books<!-- especially novel--></li>
-    <li>Love to learn various IT technology<!-- ( biased/unbalanced )--></li>
+    <li>Love to read many kinds of books</li>
+    <li>Love to learn various IT technology ( biased/unbalanced )</li>
     <li>Love to talk about all kinds of books even if I do not know anything about the contents</li></div>
 
   <p>
