--- a/index.html
+++ b/index.html
@@ -6,86 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- 위 3개의 메타 태그는 *반드시* head 태그의 처음에 와야합니다; 어떤 다른 콘텐츠들은 반드시 이 태그들 *다음에* 와야 합니다 -->
-  <title>e.riny</title>
-
-  <!-- 부트스트랩 -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <!-- IE8 에서 HTML5 요소와 미디어 쿼리를 위한 HTML5 shim 와 Respond.js -->
-  <!-- WARNING: Respond.js 는 당신이 file:// 을 통해 페이지를 볼 때는 동작하지 않습니다. -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-  <link rel="stylesheet" href="./style.css">
+  <title></title>
 </head>
-
 <body>
-<!--
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="https://eriny.net"><span style="font-family:Georgia;font-style:italic">e.riny</span></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<div class="container">
-  <h1>
-    Aloha, <small>halcyon day to you.</small></h1>
-
-  <div class="greeting-texts">
-    People do not grow easily. Various opportunities are needed to grow up. People are making lots of efforts to get various opportunities. The growth does not always lead to happiness but leads to self-trust. I am looking forward to becoming positive by self-trust.<br />
-    &nbsp;<br />
-    But, be natural. It is important.</div>
-  
-  <p>
-    &nbsp;<br /></p>
-
-  <h3>
-    Who <small></small></h3>
-
-  <div class="who-texts">
-    You can call me 'e.riny'<br />
-    - pronunciation is not important<br />
-    &nbsp;<br />
-    <li>Love to read many kinds of books</li>
-    <li>Love to learn various IT technology ( biased/unbalanced )</li>
-    <li>Love to talk about all kinds of books even if I do not know anything about the contents</li></div>
-
-  <p>
-    &nbsp;<br /></p>
-
-  <h3>
-    How to contact <small></small></h3>
-
-  <div class="contact-texts">
-    <li>twitter: <a href="https://twitter.com/yukinpl">https://twitter.com/yukinpl</a></li>
-    </div>
-  
-  <p>
-    &nbsp;<br /></p>
-  
-</div>
--->
 </body>
-  
 </html>
