404.html is changed - message and color of button

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@ permalink: /404.html
   <div class="row">
     <div class="col col-12" style="text-align: center">
       <p>The requested page could not be found.</p>
-      <p><a class="button button--primary" href="{{site.baseurl}}/">Back to the bLog</a></p>
+	  <p><a class="button button--primary" href="{{site.baseurl}}/"><span class="button">Back to the entrance page</span></a></p>
     </div>
   </div>
 </div>
